# openapi-spec.json
@@ -1,1 +1,177 @@
-{"openapi":"3.0.0","info":{"title":"Delivery Service","version":"1.0.0","description":"API Description for Delivery Service"},"servers":[{"url":"http://localhost:3000"}],"paths":{"/v1/delivery":{"get":{"responses":{"200":{"description":"Successful response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/Delivery"}}}},"404":{"$ref":"#/components/responses/DeliveryNotFoundError"},"500":{"$ref":"#/components/responses/InternalServerError"}},"parameters":[{"name":"deliveryId","in":"query","description":"ID of the delivery","required":true,"schema":{"type":"string"}}]},"post":{"responses":{"200":{"description":"Successful response"}},"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/Delivery"}}}}}},"/v1/ai":{"post":{"responses":{"200":{"description":"Successful response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/Answer"}}}}},"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/Question"}}}}}}},"components":{"schemas":{"Delivery":{"type":"object","properties":{"deliveryId":{"type":"string"},"driverId":{"type":"string"},"deliveryDate":{"type":"string","format":"date-time"},"deliveryStatus":{"$ref":"#/components/schemas/DeliveryStatus"},"recipientName":{"type":"string"},"recipientAddress":{"type":"string"},"deliveryInstructions":{"$ref":"#/components/schemas/DeliveryInstructions"},"proofOfDelivery":{"type":"string"}}},"DeliveryStatus":{"type":"string","enum":["IN_TRANSIT","DELIVERED","PENDING"]},"DeliveryInstructions":{"type":"string","enum":["LEAVE_AT_FRONT_DOOR","LEAVE_AT_BACK_DOOR","OTHER"]},"ErrorModel":{"type":"object","required":["message"],"properties":{"message":{"type":"string"}}},"Answer":{"type":"object","properties":{"answer":{"type":"string"}}},"Question":{"type":"object","properties":{"answer":{"type":"string"}}}},"responses":{"InternalServerError":{"description":"Internal server error","content":{"application/json":{"schema":{"$ref":"#/components/schemas/ErrorModel"}}}},"DeliveryNotFoundError":{"description":"Delivery not found","content":{"application/json":{"schema":{"$ref":"#/components/schemas/ErrorModel"}}}}}}}
+{
+  "openapi": "3.1.0",
+  "info": {
+      "title": "GoPal API Model",
+      "version": "2024-05-01",
+      "description": "Provides weather forecasts"
+  },
+  "paths": {
+      "/v1/get-itinerary": {
+          "post": {
+              "description": "This API returns an AI generated trip planning from input",
+              "operationId": "GetItinerary",
+              "requestBody": {
+                  "content": {
+                      "application/json": {
+                          "schema": {
+                              "$ref": "#/components/schemas/GetItineraryRequestContent"
+                          }
+                      }
+                  },
+                  "required": true
+              },
+              "responses": {
+                  "200": {
+                      "description": "GetItinerary 200 response",
+                      "content": {
+                          "application/json": {
+                              "schema": {
+                                  "$ref": "#/components/schemas/GetItineraryResponseContent"
+                              }
+                          }
+                      }
+                  },
+                  "404": {
+                      "description": "NotFoundException 404 response",
+                      "content": {
+                          "application/json": {
+                              "schema": {
+                                  "$ref": "#/components/schemas/NotFoundExceptionResponseContent"
+                              }
+                          }
+                      }
+                  },
+                  "501": {
+                      "description": "TerminalException 501 response",
+                      "content": {
+                          "application/json": {
+                              "schema": {
+                                  "$ref": "#/components/schemas/TerminalExceptionResponseContent"
+                              }
+                          }
+                      }
+                  }
+              }
+          }
+      }
+  },
+  "components": {
+      "schemas": {
+          "GetItineraryRequestContent": {
+              "type": "object",
+              "properties": {
+                  "destination": {
+                      "type": "string"
+                  },
+                  "startDate": {
+                      "type": "string",
+                      "format": "date-time"
+                  },
+                  "endDate": {
+                      "type": "string",
+                      "format": "date-time"
+                  },
+                  "numOfPeople": {
+                      "type": "number"
+                  }
+              },
+              "required": [
+                  "destination",
+                  "endDate",
+                  "numOfPeople",
+                  "startDate"
+              ]
+          },
+          "GetItineraryResponseContent": {
+              "type": "object",
+              "properties": {
+                  "country": {
+                      "type": "string"
+                  },
+                  "destination": {
+                      "type": "string"
+                  },
+                  "destinationImageUrl": {
+                      "type": "string"
+                  },
+                  "placesToStay": {
+                      "type": "array",
+                      "items": {
+                          "$ref": "#/components/schemas/PlaceToStay"
+                      }
+                  },
+                  "planningDays": {
+                      "type": "array",
+                      "items": {
+                          "$ref": "#/components/schemas/PlanningDay"
+                      }
+                  }
+              }
+          },
+          "NotFoundExceptionResponseContent": {
+              "type": "object",
+              "description": "This exception is thrown when a requested resource does not exist.",
+              "properties": {
+                  "message": {
+                      "type": "string"
+                  }
+              }
+          },
+          "PlaceToStay": {
+              "type": "object",
+              "properties": {
+                  "name": {
+                      "type": "string"
+                  },
+                  "reviewScore": {
+                      "type": "number",
+                      "maximum": 10,
+                      "minimum": 1,
+                      "format": "float"
+                  },
+                  "numOfReviews": {
+                      "type": "number"
+                  },
+                  "suggestedPrice": {
+                      "type": "number"
+                  },
+                  "currency": {
+                      "type": "string"
+                  }
+              },
+              "required": [
+                  "name"
+              ]
+          },
+          "PlanningDay": {
+              "type": "object",
+              "properties": {
+                  "dayNumber": {
+                      "type": "number"
+                  },
+                  "title": {
+                      "type": "string"
+                  },
+                  "location": {
+                      "type": "string"
+                  },
+                  "locationImageUrl": {
+                      "type": "string"
+                  },
+                  "description": {
+                      "type": "string"
+                  }
+              }
+          },
+          "TerminalExceptionResponseContent": {
+              "type": "object",
+              "description": "This exception is thrown when a dependency call has failed or an internal error occurs.",
+              "properties": {
+                  "message": {
+                      "type": "string"
+                  }
+              }
+          }
+      }
+  }
+}
